# logginger

./: .gitignore  README.md  examples.py  main.py  pyproject.toml  requirements.txt
logginger/: __init__.py  _config.py  config.py  fmts.py  formatters.py  utils.py
logginger/handlers/slack/: __init__.py  colors.py
logginger/slack/: __init__.py
logginger/uvicorn/: __init__.py
